Some api things
