# static/openapi.yaml
@@ -96,7 +96,19 @@ paths:
       description: Retrieves the list of contests
       responses:
         "200":
-          description: ok
+          description: A list of contests was retrieved
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  contests:
+                    type: array
+                    items:
+                      type: integer
+                      description: The ID of a contest
+        "401":
+          description: The user was not authenticated
     post:
       tags:
         - contests
@@ -150,30 +162,54 @@ paths:
                     description: The ID of the contest
         "400":
           description: The request was malformed
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    description: The error encountered
+        "401":
+          description: The user was not authenticated
         "422":
           description: The request had semantic errors
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    description: The error encountered
   /api/contests/{id}:
     parameters:
       - name: id
         in: path
         required: true
         description: The ID of the contest
+    get:
+      tags:
+        - contests
+      summary: Retrieves a contest
+      responses:
+        "200":
+          description: A list of contest is being provided
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  phiquadro_id:
+                    type: number
+                    description: The ID of the contest on phiquadro
+                  phiquadro_sess:
+                    type: number
+                    description: The session of the contest on phiquadro
+                  name:
+                    type: string
+                    description: The name of the contest
+                  start_time:
+                    type: string
+                    description: The start time of the contest
+                    example: 2025-01-30T10:10
+                  duration:
+                    type: number
+                    description: The duration of the contest in seconds
+                  drift:
+                    type: number
+                    description: The drift of the contest
+                  drift_duration:
+                    type: number
+                    description: The duration of the drift of the contest in seconds
+        "401":
+          description: The user was not authenticated
+        "404":
+          description: The requested contest was not found or is not accessible to the user
     patch:
       tags:
         - contests
@@ -206,8 +242,12 @@ paths:
           description: The update was successful
         "400":
           description: The request was malformed
+        "401":
+          description: The user was not authenticated
+        "403":
+          description: The user requested to perform an action they were not allowed to perform
         "404":
-          description: The requested contest was not found
+          description: The requested contest was not found or is not accessible to the user
         "422":
           description: The request has semantic errors
     delete:
@@ -216,7 +256,9 @@ paths:
       summary: Deletes the contest
       responses:
         "204":
-          descrition: The deletion was successful
+          description: The deletion was successful
+        "401":
+          description: The user was not authenticated
         "404":
-          description: The requested contest as not found
+          description: The requested contest was not found or is not accessible to the user
 
